fix(agent): set apply kspm-analyzer settings when run in host shield
for the kspm-analyzer to run as expected as a part of host shield, the
agent/host-shield container needs to expose the kspm-analyzer's agent
port, which is 12000 by default. additionally, the kspm-analyzer also
needs to have its agent_app_name set to match the selector used on the
agent pod.

--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -45,6 +45,9 @@ data:
   {{- $caFilePath := printf "%s%s" "certificates/" (include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl)) }}
   {{- $mergedSettings := mergeOverwrite $baseSettings (dict "http_proxy" (dict "ca_certificate" $caFilePath)) -}}
   {{ toYaml $mergedSettings | nindent 4 }}
+{{- else if (dig "kspm_analyzer" "enabled" false $baseSettings) }}
+  {{- $mergedSettings := mergeOverwrite $baseSettings (dict "kspm_analyzer" (dict "agent_app_name" "agent")) -}}
+  {{ toYaml $mergedSettings | nindent 4 }}
 {{- else if .Values.sysdig.settings }}
   {{ toYaml .Values.sysdig.settings | nindent 4 }}
 {{- end }}
