fix(agent): set allowHostPorts when needed
When either the kspm-analyzer or the prometheus exporter
are enabled in the agent container we require the ability
for the agent container to utilize host ports.

--- a/charts/agent/templates/securitycontextconstraint.yaml
+++ b/charts/agent/templates/securitycontextconstraint.yaml
@@ -12,7 +12,11 @@ allowHostDirVolumePlugin: true
 allowHostIPC: false
 allowHostNetwork: true
 allowHostPID: true
+{{- if or (dig "kspm_analyzer" "enabled" false .Values.sysdig.settings) (dig "prometheus_exporter" "enabled" false .Values.sysdig.settings) }}
+allowHostPorts: true
+{{- else }}
 allowHostPorts: false
+{{- end }}
 allowPrivilegeEscalation: true
 allowPrivilegedContainer: true
 {{- if eq "true" (include "agent.privileged" .) }}
