chore(agent): mount /host/dev volume readonly on ebpf mode

--- a/charts/agent/templates/daemonset.yaml
+++ b/charts/agent/templates/daemonset.yaml
@@ -269,6 +269,7 @@ spec:
           {{- /* Always requested */}}
             - mountPath: /host/dev
               name: dev-vol
+              readOnly: {{ (include "agent.ebpfEnabled" .) | default false }}
             - mountPath: /host/usr
               name: usr-vol
               readOnly: true
