--- a/charts/registry-scanner/templates/configmap.yaml
+++ b/charts/registry-scanner/templates/configmap.yaml
@@ -96,6 +96,13 @@ data:
       podAnnotations:
         {{- toYaml .Values.podAnnotations | nindent 8 }}
       {{- end }}
+      {{- if .Values.config.scan.inlineJobNodeSelector }}
+      nodeSelector:
+        {{- toYaml .Values.config.scan.inlineJobNodeSelector | nindent 8 }}
+      {{- else if .Values.nodeSelector }}
+      nodeSelector:
+        {{- toYaml .Values.nodeSelector | nindent 8 }}
+      {{- end }}
       {{- if .Values.config.scan.securityContext }}
       securityContext:
         {{- include "registry-scanner.scan.securityContext" . | nindent 8}}
